prevent overflow / rubberband scrolling on iOS

--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -28,6 +28,7 @@ body {
   font-family: 'Roboto Condensed', sans-serif;
   margin: 0;
   padding: 0px;
+  position: fixed;
 }
 // responsive title
 // font-size: calc(2rem + 2*(100vw - 30rem)/30);
